force-app/main/default/objects/SchoolDiary__c/SchoolDiary__c.object-meta.xml
<CustomObject>
    <label>学園日誌</label>
    <nameField>
        <displayFormat>学園日誌{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>学園日誌</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>