force-app/main/default/objects/SchoolDiary__c/fields/FreeMorningPlay__c.field-meta.xml
<CustomField>
    <fullName>FreeMorningPlay__c</fullName>
    <label>朝の自由遊び</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>内</fullName>
            </value>
            <value>
                <fullName>外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>