force-app/main/default/objects/SchoolDiary__c/fields/GardeningContent1__c.field-meta.xml
<CustomField>
    <fullName>GardeningContent1__c</fullName>
    <label>園務内容1</label>
    <type>TextArea</type>
</CustomField>