force-app/main/default/objects/SchoolDiary__c/fields/GardeningContent2__c.field-meta.xml
<CustomField>
    <fullName>GardeningContent2__c</fullName>
    <label>園務内容2</label>
    <type>TextArea</type>
</CustomField>