force-app/main/default/objects/SchoolDiary__c/fields/GardeningContent3__c.field-meta.xml
<CustomField>
    <fullName>GardeningContent3__c</fullName>
    <label>園務内容3</label>
    <type>TextArea</type>
</CustomField>