force-app/main/default/objects/SchoolDiary__c/fields/HealthConsiderations__c.field-meta.xml
<CustomField>
    <fullName>HealthConsiderations__c</fullName>
    <label>健康面の特機事項</label>
    <type>TextArea</type>
</CustomField>