force-app/main/default/objects/SchoolDiary__c/fields/KindergartenCustody__c.field-meta.xml
<CustomField>
    <fullName>KindergartenCustody__c</fullName>
    <label>幼稚園あずかり人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>