force-app/main/default/objects/SchoolDiary__c/fields/Meeting1__c.field-meta.xml
<CustomField>
    <fullName>Meeting1__c</fullName>
    <label>連絡・打ち合わせ1</label>
    <type>TextArea</type>
</CustomField>