force-app/main/default/objects/SchoolDiary__c/fields/Meeting2__c.field-meta.xml
<CustomField>
    <fullName>Meeting2__c</fullName>
    <label>連絡・打ち合わせ2</label>
    <type>TextArea</type>
</CustomField>