force-app/main/default/objects/SchoolDiary__c/fields/Meeting3__c.field-meta.xml
<CustomField>
    <fullName>Meeting3__c</fullName>
    <label>連絡・打ち合わせ3</label>
    <type>TextArea</type>
</CustomField>