force-app/main/default/objects/SchoolDiary__c/fields/NurserySchoolExtension__c.field-meta.xml
<CustomField>
    <fullName>NurserySchoolExtension__c</fullName>
    <label>保育園延長人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>