force-app/main/default/objects/SchoolDiary__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>その他</label>
    <type>TextArea</type>
</CustomField>