force-app/main/default/objects/SchoolDiary__c/fields/SchoolLunch__c.field-meta.xml
<CustomField>
    <fullName>SchoolLunch__c</fullName>
    <label>園児食数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>