force-app/main/default/objects/SchoolDiary__c/fields/StaffLunch__c.field-meta.xml
<CustomField>
    <fullName>StaffLunch__c</fullName>
    <label>職員食数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>