force-app/main/default/objects/SchoolDiary__c/fields/Weather__c.field-meta.xml
<CustomField>
    <fullName>Weather__c</fullName>
    <label>天候</label>
    <length>20</length>
    <type>Text</type>
</CustomField>