force-app/main/default/objects/SchoolDiary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Week__c</columns>
    <columns>Weather__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>